<resources xmlns:tools="http://schemas.android.com/tools" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Book Listing App</string>

    <!--Edit text hint-->
    <string name="edit_text_hint">Search keyword</string>

    <!--Search term text view-->
    <string name="search_term">Your search: <xliff:g name="keyword">%s</xliff:g></string>

    <!--PLACEHOLDER STRINGS-->
    <string name="placeholder_author">John Doe</string>
    <string name="placeholder_title">The Best Book in the World</string>
    <string name="placeholder_rating">3.7(19)</string>
    <string name="placeholder_year">2009</string>

    <!--CONTENT DESCRIPTION STRINGS-->
    <!--The cover of the book-->
    <string name="book_cover">A thumbnail of the <xliff:g name="cover">%s</xliff:g></string>
    <string name="search_button">A button to press once a search term is entered</string>

    <!--STRINGS FOR DEALING WITH EXCEPTIONS -->
    <string name="url_exception">Problem with the request URL</string>
    <string name="response_code_exception" tools:ignore="PluralsCandidate">
        Error: <xliff:g name="response_code">%d</xliff:g> response code received
    </string>
    <string name="json_exception">Problem retrieving JSON correctly</string>
    <string name="parse_exception">Invalid date or problem with date formatting</string>
    <string name="http_request_exception">HTTP request error</string>
    <string name="no_network_connection">
        Error. No network connection or unable to connect to network.
    </string>
    <string name="null_pointer_exception">Error. No response code found.</string>
    <string name="keyboard_hide_exception">Error hiding keyboard</string>
    <string name="malformed_url_exception">Problem with the thumbnail URL</string>
    <string name="io_exception">Unknown IO exception</string>

    <!--STRINGS FOR DEALING WITH NO RESULTS, SUCH AS NO AUTHOR OR NO TITLE-->
    <string name="unknown_author">Unknown Author</string>
    <string name="unknown_title">Unknown Title</string>
    <string name="no_categories">None</string>

    <!--PROGRESS DIALOG TITLE AND MESSAGE-->
    <string name="progress_dialog_title">Progress</string>
    <string name="progress_dialog_message">Loading Images....</string>
    <string name="no_results">No books found with search result. Please try another search.</string>
    <string name="welcome">Welcome to the Book Listing App. Please feel free to search the Google Books catalogue.</string>
</resources>
